# hydra

./: README.md  dump.rdb
gloo/: CMakeLists.txt  dump.rdb  z.sh
gloo/cmake/: Dependencies.cmake
gloo/cmake/Modules/: Findhiredis.cmake
gloo/docs/: algorithms.md
gloo/gloo/: CMakeLists.txt  aabaocun.cc  aatest.h  allgather.cc  allreduce.cc  allreduce.h  context.h  dump.rdb  output.txt  pipeallreduce-a.cc  pipeallreduce-a.h  pipeallreduce-s.cc  pipeallreduce-s.h  pipeallreduce.cc  pipeallreduce.h  reduce.cc  reduce.h
gloo/gloo/benchmark/: 1516.txt  benchmark.h  dump.rdb  main.cc  newbenchmark.h  options.cc  options.h  runner.cc  runner.h
gloo/gloo/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example1  example1.cc  example_all  example_allreduce.cc  example_glex  example_glex.cc  example_glex_redis.cc  example_new_try.cc  example_nt  example_pg  example_pg.cc  example_pipe  example_pipe.cc  example_sharp_allreduce  example_sharp_allreduce.cc  looks_like_mpi
gloo/gloo/transport/: CMakeLists.txt
installed/gloo_glex/include/gloo/: config.h  pipeallreduce-a.h  pipeallreduce-s.h
installed/gloo_glex/include/gloo/transport/: context.h  unbound_buffer.h
installed/gloo_glex/share/cmake/Gloo/: GlooTargets-release.cmake  GlooTargets.cmake
